--- a/Bus.css
+++ b/Bus.css
@@ -1,9 +1,24 @@
-#navbarSupportedContent{
-    position: relative;
-    padding-left: 700px;
+.navbar-brand{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.nav-item{
+.navbar{
+  background-color: rgba(255, 255, 255, 0);
+}
+.navbar-collapse{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: black;
+}
+
+.heading{
+  font-family: 'Rancho', cursive;
+  font-size:55px;
+  margin-top: 110px;
+  margin-bottom: 70px;
+  text-align: center;
 }
 .site-blocks-cover {
     background-size: cover;
@@ -53,8 +68,9 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    display: block; }
-    .unit-1:after {
+    display: block; 
+}
+.unit-1:after {
       content: "";
       z-index: 1;
       position: absolute;
@@ -67,30 +83,37 @@
       background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(18%, transparent), color-stop(99%, rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8)));
       background: -o-linear-gradient(top, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
       background: linear-gradient(to bottom, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#cc000000',GradientType=0 ); }
-    .unit-1 img {
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#cc000000',GradientType=0 ); 
+}
+.unit-1 img {
       -o-object-fit: cover;
       object-fit: cover;
       -webkit-transform: scale(1);
       -ms-transform: scale(1);
-      transform: scale(1); }
-    .unit-1 img, .unit-1 .unit-1-text {
+      transform: scale(1); 
+}
+.unit-1 img, .unit-1 .unit-1-text {
       -webkit-transition: .3s all ease-in-out;
       -o-transition: .3s all ease-in-out;
-      transition: .3s all ease-in-out; }
-    .unit-1 .unit-1-text {
+      transition: .3s all ease-in-out; 
+}
+.unit-1 .unit-1-text {
       z-index: 2;
       position: absolute;
       bottom: 10px;
       color: #fff;
       display: block;
-      width: 100%; }
-      .unit-1 .unit-1-text .unit-1-heading {
+      width: 100%; 
+}
+.unit-1 .unit-1-text .unit-1-heading {
         font-size: 1.2rem;
-        position: relative; }
-    .unit-1:hover .unit-1-text {
-      bottom: 30px; }
-    .unit-1:hover img {
+        position: relative; 
+}
+.unit-1:hover .unit-1-text {
+      bottom: 30px;
+}
+.unit-1:hover img {
       -webkit-transform: scale(1.05);
       -ms-transform: scale(1.05);
-      transform: scale(1.05); }
+      transform: scale(1.05); 
+}
