--- a/Bus.css
+++ b/Bus.css
@@ -1,3 +1,8 @@
+*{
+    padding:0;
+    box-sizing: border-box;
+    margin: 0;
+}
 .navbar-brand{
   display: flex;
   justify-content: center;
@@ -18,14 +23,14 @@
 .heading{
   font-family: 'Rancho', cursive;
   font-size:55px;
-  margin-top: 110px;
+  margin-top: 100px;
   text-align: center;
   color: black;
 }
 .subheading{
     text-align: center;
     color: black;
-    margin-bottom: 70px;
+    margin-bottom: 80px;
     opacity: 0.7;
 }
 .site-blocks-cover {
@@ -66,6 +71,7 @@
     color: #fff;
     line-height: 1.5; 
 }
+
 
 .mb-5{
     color: white;
