--- a/Bus.css
+++ b/Bus.css
@@ -15,15 +15,29 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
+    /* color: black; */
 }
+
 .nav-link{
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+    /* opacity: 1; */
 }
+
+.nav-link.scrolled {
+    color:black !important;
+    transition: color 1s linear;
+}
+.navbar.scrolled{
+    background-color: white !important;
+    transition: background-color 1s linear;
+}
+
 .heading{
   font-family: 'Rancho', cursive;
   font-size:55px;
-  margin-top: 100px;
+  margin-top: 80px;
   text-align: center;
   color: black;
 }
@@ -33,6 +47,7 @@
     margin-bottom: 80px;
     opacity: 0.7;
 }
+
 .site-blocks-cover {
     background-size: cover;
     background-repeat: no-repeat;
