--- a/Bus.css
+++ b/Bus.css
@@ -3,6 +3,96 @@
     box-sizing: border-box;
     margin: 0;
 }
+
+/* .header{
+    z-index: 1;
+    width: 100%;
+    height: 80px;
+    background: rgba(255, 255, 255, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+}
+.bar{
+    z-index: 1;
+    width: 20%;
+    height: 100%;
+    position: fixed;
+    top: 80px;
+    background-color:#353b48;
+    left: -100%;
+    transition: 0.5s;
+}
+.bar ul{
+    list-style: none;
+}
+.bar ul li{
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+}
+.bar ul li a{
+    display: block;
+    text-decoration: none;
+    color: white;
+    font-size: 22px;
+    padding: 15px 15px;
+}
+.bar a i{
+    margin-right:15px;
+}
+.bar ul li a:hover{
+    border-left: 10px solid white;
+    transition: 0.4s;
+}
+.social{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 30px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    border-top:2px solid rgba(255, 255, 255, 0.1);
+    padding: 15px 20px;
+    margin-top: 220px; 
+}
+i{
+    font-size: 30px;
+    color: white;
+}
+.show-btn, .hide-btn{
+    font-size: 35px;
+    color:white;
+    position: fixed;
+    top: 20px;
+    left:40px;
+}
+.hide-btn{
+    opacity: 0;
+}
+#check{
+    display: none;
+}
+#check:checked ~ .bar{
+    left: 0;
+}
+#check:checked ~ .show-btn{
+    opacity: 0;
+}
+#check:checked ~ .hide-btn{
+    opacity: 1;
+}
+#check:checked ~ .content{
+    width: 80%;
+}
+@media (max-width: 768px){
+    .bar{
+        width: 100%;
+        text-align: center;
+    }
+    .header h1{
+        display: none;
+    }
+} */
+
 .navbar-brand{
   display: flex;
   justify-content: center;
