--- a/css/Bus.css
+++ b/css/Bus.css
@@ -3,7 +3,9 @@
     box-sizing: border-box;
     margin: 0;
 }
-
+html, body{
+    overflow-x: hidden;
+}
 /* .header{
     z-index: 1;
     width: 100%;
