--- a/css/contact.css
+++ b/css/contact.css
@@ -2,11 +2,9 @@
     padding:100px auto;
 }
 
-.navbar{
-    background-color: rgba(0, 0, 0, 0);
-}
 
+/* 
 .navbar.scrolled{
     background-color: white !important;
     transition: background-color 1s linear;
-}
+} */
