--- a/css/Form.css
+++ b/css/Form.css
@@ -26,13 +26,13 @@
         .container {
             /* z-index: 2; */
             background-color: #fff;
-            /* width: 1000px; */
-            height: 100vh;
+            width: 1000px;
+            height: 110vh;
             border-radius: 5px;
             overflow: hidden;
-            /* margin-top: 3px;
+            margin-top: 3px;
             margin-bottom: 53px;
-            margin-left: 16%; */
+            margin-left: 16%;
             box-shadow: lightslategray;
 
         }
