--- a/css/Payment.css
+++ b/css/Payment.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
         * {
             padding: 0;
