--- a/css/about.css
+++ b/css/about.css
@@ -20,3 +20,105 @@
     margin-bottom: 40px;
     margin-left: 38%;
 }
+
+.bus {
+    /* Some layout code… */
+    animation: xAxis 5s infinite ease-in;
+  }
+
+@keyframes xAxis {
+    100% {
+      animation-timing-function: ease-in;
+      transform: translateX(1450px);
+    }
+  }
+
+p{
+    color:gray;
+    Font-size: 16px;
+    transition: 0.4s;
+}
+.list-unstyled a{
+    text-decoration:none;
+    color:gray;
+    Font-size: 16px;
+    transition: 0.4s;
+}
+
+.list-unstyled a:hover{
+    text-decoration: none;
+}
+
+.page-footer{
+    /* background-color:rgb(25, 29, 29); */
+    background-color: black;
+    /* #262f3c */
+}
+
+
+i {
+    font-size: 20px;
+    color:lightgray;
+}
+i:hover{
+    color: white;
+}
+
+.list-unstyled li a{
+    color:gray;
+}
+
+.list-unstyled li a:hover{
+    color: white;
+}
+
+.social ul li {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 14px;
+    background-color: #2c3e50;
+    border-radius: 50%;
+    margin-right: 10px;
+    transition: 0.4s;
+}
+
+
+.footer-copyright{
+    display: flex;
+    justify-content: center;
+    background-color:#728081;
+    /* #728081 */
+    padding: 30px;
+}
+
+.footer-copyright p {
+    color: #2c3e50;
+    position: relative;
+}
+
+.footer-copyright p::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    position: absolute;
+    right: 0;
+    bottom: -10px;
+    background-color: black;
+    transition: all 0.4s;
+}
+
+.footer-copyright a {
+    text-decoration: none;
+    font-weight: 600;
+    color: #2c3e50;
+}
+
+.footer-copyright p:hover::after {
+    width: 100%;
+}
+.footer-copyright a:hover{
+    color:black;
+    transition: 0.4s;
+}
