--- a/css/Payment.css
+++ b/css/Payment.css
@@ -6,6 +6,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+html{
+    overflow-x: hidden;
+}
 
 body {
             /* background: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1);
@@ -16,6 +19,7 @@ body {
             /* display: flex;
             justify-content: center;
             align-items: center; */
+            
 }
 
 .site-blocks-cover{
@@ -23,6 +27,7 @@ body {
     background-size: cover;
     position: absolute;
 }
+
 /* -------------------------------------------------------------------------------------------------------------------------- */
 @media only screen and (min-width: 1200px){
         .container {
@@ -31,8 +36,8 @@ body {
             height: 1160px;
             border-radius: 5px;
             overflow: hidden;
-            /* margin-top: 3px;
-            margin-bottom: 53px;
+            /* margin-top: 5px; */
+            /* margin-bottom: 53px;
             margin-left: 16%; */
             margin: auto;
             box-shadow: lightslategray;
