--- a/css/Payment.css
+++ b/css/Payment.css
@@ -1,5 +1,4 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 * {
     padding: 0;
@@ -19,7 +18,6 @@ body {
             /* display: flex;
             justify-content: center;
             align-items: center; */
-            
 }
 
 .site-blocks-cover{
@@ -27,17 +25,17 @@ body {
     background-size: cover;
     position: absolute;
 }
-
 /* -------------------------------------------------------------------------------------------------------------------------- */
 @media only screen and (min-width: 1200px){
         .container {
+            /* z-index: 2; */
             background-color: #fff;
             width: 80vw;
-            height: 1160px;
+            height: 660px;
             border-radius: 5px;
             overflow: hidden;
-            /* margin-top: 5px; */
-            /* margin-bottom: 53px;
+            /* margin-top: 3px;
+            margin-bottom: 53px;
             margin-left: 16%; */
             margin: auto;
             box-shadow: lightslategray;
@@ -515,7 +513,7 @@ body {
 
     button {
         display: inline-block;
-        width: 30%;
+        /* width: 30%; */
         background-color:black;
         color: white;
         text-align: center;
