--- a/css/Bus.css
+++ b/css/Bus.css
@@ -40,6 +40,14 @@ html, body{
     transition: background-color 1s linear;
 }
 
+
+#custom-nav {
+    /* -webkit-box-shadow: 20px 20px 20px rgba(167, 167, 167, 0.616); */
+    /* -moz-box-shadow:    20px 20px 20px rgb(192, 192, 192); */
+    box-shadow:         1px 1px 2px rgb(192, 191, 191);
+    z-index:999;
+}
+
 .heading{
   /* font-family: 'Rancho', cursive; */
   font-size:55px;
