--- a/css/Bus.css
+++ b/css/Bus.css
@@ -50,10 +50,22 @@ html, body{
 
 .heading{
   /* font-family: 'Rancho', cursive; */
-  font-size:55px;
-  margin-top: 80px;
+  font-size:50px;
+  margin-top: 120px;
   /* text-align: center; */
   color: black;
+}
+
+@media(max-width: 350px){
+    .heading{
+        font-size: 35px;
+    }
+    .under{
+        width: 96%;
+    }
+    .subheading{
+        font-size: 15px;
+    }
 }
 .subheading{
     /* text-align: center; */
