--- a/css/login.css
+++ b/css/login.css
@@ -34,7 +34,7 @@
         margin-left: 32px;
         margin-top: 35px;
     }
-    input{
+    .form-control input{
         display: block;
         width:91%;
         padding: 9px;
@@ -45,7 +45,7 @@
         border: none;
         border-bottom: 1px solid rgb(116, 114, 114);
     }
-    label{
+    .form-control label{
         font-size: 17px;
         margin-bottom: 30px;
     }
@@ -58,6 +58,29 @@
         margin-left: 31% ;
         margin-top: 20px;
         font-size: 17px;
+    }
+    .form-control.success input {
+        border-color: green;
+    }
+
+    .form-control.error input {
+        border-color: red;
+    }
+
+    .form-control.success .fa-check-circle {
+        visibility: visible;
+        color: green;
+    }
+
+    .form-control.error .fa-exclamation-circle {
+        visibility: visible;
+        color: red;
+    }
+
+
+    .form-control.error small {
+        visibility: visible;
+        color: red;
     }
 }
 
@@ -110,6 +133,29 @@
         margin-top: 20px;
         font-size: 17px;
     }
+    .form-control.success input {
+        border-color: green;
+    }
+
+    .form-control.error input {
+        border-color: red;
+    }
+
+    .form-control.success .fa-check-circle {
+        visibility: visible;
+        color: green;
+    }
+
+    .form-control.error .fa-exclamation-circle {
+        visibility: visible;
+        color: red;
+    }
+
+
+    .form-control.error small {
+        visibility: visible;
+        color: red;
+    }
 }
 
 @media only screen and (min-width: 768px) {
@@ -160,6 +206,29 @@
         margin-left: 31% ;
         margin-top: 20px;
         font-size: 17px;
+    }
+    .form-control.success input {
+        border-color: green;
+    }
+
+    .form-control.error input {
+        border-color: red;
+    }
+
+    .form-control.success .fa-check-circle {
+        visibility: visible;
+        color: green;
+    }
+
+    .form-control.error .fa-exclamation-circle {
+        visibility: visible;
+        color: red;
+    }
+
+
+    .form-control.error small {
+        visibility: visible;
+        color: red;
     }
 }
 
@@ -212,6 +281,29 @@
         margin-top: 20px;
         font-size: 17px;
     }
+    .form-control.success input {
+        border-color: green;
+    }
+
+    .form-control.error input {
+        border-color: red;
+    }
+
+    .form-control.success .fa-check-circle {
+        visibility: visible;
+        color: green;
+    }
+
+    .form-control.error .fa-exclamation-circle {
+        visibility: visible;
+        color: red;
+    }
+
+
+    .form-control.error small {
+        visibility: visible;
+        color: red;
+    }
 }
 
 @media only screen and (max-width: 600px){
@@ -262,5 +354,28 @@
         margin-left: 31% ;
         margin-top: 20px;
         font-size: 17px;
+    }
+    .form-control.success input {
+        border-color: green;
+    }
+
+    .form-control.error input {
+        border-color: red;
+    }
+
+    .form-control.success .fa-check-circle {
+        visibility: visible;
+        color: green;
+    }
+
+    .form-control.error .fa-exclamation-circle {
+        visibility: visible;
+        color: red;
+    }
+
+
+    .form-control.error small {
+        visibility: visible;
+        color: red;
     }
 }
